--- a/about-company.html
+++ b/about-company.html
@@ -36,13 +36,6 @@
 </head>
 
 <body class="home page page-id-5 page-template-default wpb-js-composer js-comp-ver-4.9.2 vc_responsive">
-    <div class="header-socials-wrapper">
-        <ul class="header-socials">
-            <li><a class="header-social header-icon-facebook" href="#" title="Facebook"><i class="header-icons icon-facebook" ></i></a></li>
-            <li><a class="header-social header-icon-twitter" href="#" title="Twitter"><i class="header-icons icon-twitter" ></i></a></li>
-        </ul>
-        <div class="clear"></div>
-    </div>
     <div class="container-wrapper">
         <div id="header-wrapper">
             <div class="logo">
@@ -54,7 +47,7 @@
                         <li class="menu-item"><a href="index.html">Главная</a></li>
                         <li class="menu-item"><a href="work.html">Галерея</a></li>
                         <li class="menu-item current-menu-item"><a href="about-company.html">О нас</a></li>
-                        <li class="menu-item"><a href="our-services.html">Септика</a></li>
+                        <li class="menu-item"><a href="our-services.html">Услуги</a></li>
                         <li class="menu-item"><a href="blog.html">Отзывы</a></li>
                         <li class="menu-item"><a href="contact-us.html">Контакты</a></li>
                     </ul>
@@ -72,7 +65,7 @@
                     <li class="menu-item current-menu-item"><a href="work.html">Галерея</a></li>
                     <li class="menu-item"><a href="about-company.html">About</a></li>
                     <li class="menu-item"><a href="our-services.html">О нас</a></li>
-                    <li class="menu-item"><a href="blog.html">Септика</a></li>
+                    <li class="menu-item"><a href="blog.html">Услуги</a></li>
                     <li class="menu-item"><a href="contact-us.html">Отзывы</a></li>
                 </ul>
             </div>
@@ -94,92 +87,50 @@
                                         </p>
                                         <p>Мы выполняем профессиональное бурение артезианских, бытовых, 
                                             промышленных и инженерных скважин быстро и с гарантией. Сотрудники проводят предварительные инженерно-геологические изыскания для определения точки бурения. Высококвалифицированные дипломированные специалисты подберут оптимальный вариант для решения задач клиента максимально эффективно. Будет вычислена глубина залегания подземных вод и в результате заказчик получает 100% чистую воду. Также доступен выезд на осмотр и обслуживание уже готовых скважин.
-                                            </p>
+                                        </p>
                                     </div>
                                     <div class="pego-columns-auto-height pego-columns6 fl  about-element2"><img class="fl" src="upload/office-image.jpg" alt="" /></div>
                                     <div class="clear"></div>
                                 </div>
-                                <div class="pego-columns6 fl team-wrapper">
-                                    <div class="pego-columns pego-columns3 fl team-member-single"><img width="315" height="290" src="upload/team-member1.jpg" class="attachment-full size-full" alt="team-member1" />
-                                        <div class="team-member-overlay">
-                                            <div class="team-member-overlay-inside">
-                                                <div class="team-member-title">Bill Jones</div>
-                                                <div class="team-member-position">executive manager</div>
-                                                <div class="team-member-email">bill.jones@constructy.com</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl team-member-single"><img width="315" height="290" src="upload/team-member2.jpg" class="attachment-full size-full" alt="team-member2"  />
-                                        <div class="team-member-overlay">
-                                            <div class="team-member-overlay-inside">
-                                                <div class="team-member-title">Jack Smith</div>
-                                                <div class="team-member-position">project manager</div>
-                                                <div class="team-member-email">jack.smith@constructy.com</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl team-member-single"><img width="315" height="290" src="upload/team-member3.jpg" class="attachment-full size-full" alt="team-member3" />
-                                        <div class="team-member-overlay">
-                                            <div class="team-member-overlay-inside">
-                                                <div class="team-member-title">Joana McKnee</div>
-                                                <div class="team-member-position">architect</div>
-                                                <div class="team-member-email">joana.mcknee@constructy.com</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl team-member-single"><img width="315" height="290" src="upload/team-member4.jpg" class="attachment-full size-full" alt="team-member4" />
-                                        <div class="team-member-overlay">
-                                            <div class="team-member-overlay-inside">
-                                                <div class="team-member-title">George Nash</div>
-                                                <div class="team-member-position">construction worker</div>
-                                                <div class="team-member-email">george.nash@constructy.com</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                                 <div class="pego-columns6 fl  company-history-wrapper">
                                     <div class="pego-columns pego-columns3 fl  company-history-element1">
-                                        <h1 class="history-page-heading">Company <span>history<span></h1>
-                                        <p class="history-page-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ornare odio et massa dignissim, at accumsan metus viverra. Integer neque lectus, pellentesque sitesit au dolor.</p>
+                                        <h1 class="history-page-heading">Адрес <span>Компании<span></h1>
+                                        <p class="history-page-summary">Тверская область, Конаковский район, пгт. Новозавидовский, ул. Моховая, 8-62</p>
                                     </div>
-                                    <div class="pego-columns pego-columns3 colorsheme1 fl  company-history-element2">
+                                    <div class="pego-columns pego-columns3 colorsheme2 fl  company-history-element2">
                                         <a class="col-link" href="#">
                                             <div class="page-vertical-alignment">
                                                 <div class="page-icon-wrapper">
                                                     <div class="page-icon pe-7s-ribbon"></div>
-                                                    <h1 class="page-title">Company history</h1></div>
+                                                    <h1 class="page-title">Сделать заказ</h1>
+                                                </div>
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl colorsheme2  company-history-element3">
-                                        <a class="col-link fancybox-media" href="https://www.youtube.com/watch?v=6fL4gOgu6Ts">
+                                    <div class="pego-columns pego-columns3 fl colorsheme2  company-history-element3" id="welcome-gif">
                                             <div class="page-vertical-alignment">
                                                 <div class="page-icon-wrapper">
-                                                    <div class="page-icon pe-7s-video"></div>
-                                                    <h1 class="page-title">Company presentation</h1></div>
+                                                    <img src="upload/welcome-gif.gif" alt="">
+                                                </div>
                                             </div>
-                                        </a>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl  company-history-element4"><img width="315" height="290" src="upload/free-consulting.jpg" class="attachment-full size-full" alt="free-consulting"  /></div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl  company-history-element4"><img width="315" height="290" src="upload/free-consulting.jpg" class="attachment-full size-full" alt="free-consulting"  /></div>
                                 </div>
                                 <div class="contact-info--wrapper">
                                     <div class="pego-columns pego-columns6 fl contact-element1">
-                                        <div class="contact-info1">Call Us Everyday</div>
-                                        <div class="contact-info2">HOT NUMBER</div>
-                                        <div class="contact-info3">(0) 987 234 56</div>
+                                        <div class="contact-info1">Наш телефон</div>
+                                        <div class="contact-info2">Горячей линии</div>
+                                        <div class="contact-info3">8 (4822) 47-55-71 <br> 8 (910) 647-55-71</div>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl contact-element2">
-    
-                                        <div id="map_canvas" class="mapStyleClass"></div>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl colorsheme1 contact-element3 opening-hours-wrapper">
+                                    <div class="pego-columns pego-columns6 fl colorsheme2 contact-element3 opening-hours-wrapper">
                                         <div class="page-vertical-alignment">
                                             <div class="page-icon-wrapper">
                                                 <div class="page-icon opening-hours-icon pe-7s-clock"></div>
-                                                <p class="opening-days">MONDAY - SATURDAY</p>
-                                                <p>9:00 am - 9:30 pm</p>
-                                                <p class="opening-days">SUNDAY</p>
-                                                <p>10:00 am - 5:30 pm</p>
+                                                <p class="opening-days">Понедельник-Пятница</p>
+                                                <p>9:00 - 20:00</p>
+                                                <p class="opening-days">Суббота</p>
+                                                <p>9:00 - 19:00</p>
                                             </div>
                                         </div>
                                     </div>
@@ -195,7 +146,7 @@
         <!-- end container -->
 
         <div class="footer">
-            <p><span>CONSTRUCTY.</span> Theme by <a href="http://themeforest.net/user/max-themes/portfolio?ref=max-themes" target="_blank">max-thems</a>. Powered by HTML5.</p>
+            <p><span>©</span> <a href="#">СпецМонтаж</a> </p>
         </div>
     </div>
     <!-- end container-wrapper -->
