--- a/blog.html
+++ b/blog.html
@@ -36,13 +36,6 @@
 </head>
 
 <body class="home page page-id-5 page-template-default wpb-js-composer js-comp-ver-4.9.2 vc_responsive">
-    <div class="header-socials-wrapper">
-        <ul class="header-socials">
-            <li><a class="header-social header-icon-facebook" href="#" title="Facebook"><i class="header-icons icon-facebook" ></i></a></li>
-            <li><a class="header-social header-icon-twitter" href="#" title="Twitter"><i class="header-icons icon-twitter" ></i></a></li>
-        </ul>
-        <div class="clear"></div>
-    </div>
     <div class="container-wrapper">
         <div id="header-wrapper">
             <div class="logo">
@@ -54,7 +47,7 @@
                         <li class="menu-item"><a href="index.html">Главная</a></li>
                         <li class="menu-item"><a href="work.html">Галерея</a></li>
                         <li class="menu-item"><a href="about-company.html">О нас</a></li>
-                        <li class="menu-item"><a href="our-services.html">Септика</a></li>
+                        <li class="menu-item"><a href="our-services.html">Услуги</a></li>
                         <li class="menu-item  current-menu-item"><a href="blog.html">Отзывы</a></li>
                         <li class="menu-item"><a href="contact-us.html">Контакты</a></li>
                     </ul>
@@ -73,7 +66,7 @@
                     <li class="menu-item"><a href="work.html">Галерея</a></li>
                     <li class="menu-item"><a href="about-company.html">About</a></li>
                     <li class="menu-item"><a href="our-services.html">О нас</a></li>
-                    <li class="menu-item"><a href="blog.html">Септика</a></li>
+                    <li class="menu-item"><a href="blog.html">Услуги</a></li>
                     <li class="menu-item  current-menu-item"><a href="contact-us.html">Отзывы</a></li>
                 </ul>
             </div>
@@ -82,165 +75,76 @@
 
         <div id="container">
             <!-- start container -->
-            <div class="post-view-wrapper">
-
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-title-type" href="#">
-                        <div class="post-view-categories">
-                            <div class="post-view-category">house</div>
+            <div class="folio-view-wrapper">
+                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <div >
+                            <img src="upload/otziv-1.jpg" alt="Interior design in colors. Amazing!" />
+                            <div class="arrow-up"></div>
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
                         </div>
-                        <div class="post-view-separator">/</div>
-                        <div class="post-view-date">March 24, 2015</div>
-                        <div class="clear"></div>
-                        <h1 class="single-post-view-title">Looking for new hard workers. Salary is awesome!</h1>
-                    </a>
+
+                        <div class="folio-view-desc">
+                            <div class="folio-view-separator">/</div>
+                            <div class="folio-view-date">25 Марта 2021</div>
+                            <div class="clear"></div>
+                            <h4 class="single-folio-view-title">Иван Владимирович</h4>
+                            <p class="folio-view-summary">Ребята быстро приехали на объект и сделали все как положено. Позвонил, и уже через 3 дня пользовался скважиной. Отличная вода — я доволен! Благодарю за ответственное отношение. Рекомендую.</p>
+                        </div>
+
+                    </div>
                 </div>
 
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-image-type" href="#">
-                        <img src="upload/window.jpg" alt="Using best windows on the market" />
-                        <div class="single-post-view-overlay">
-                            <div class="single-post-view-overlay-inside">
-                                <div class="post-view-categories">
-                                    <div class="post-view-category">material</div>
-                                </div>
-                                <div class="post-view-separator">/</div>
-                                <div class="post-view-date">March 23, 2015</div>
-                                <div class="clear"></div>
-                                <h1 class="single-post-view-title">Using best windows on the market</h1>
-                            </div>
+                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+
+                        <div class="folio-view-desc">
+                            <div class="folio-view-separator">/</div>
+                            <div class="folio-view-date">25 Марта 2021</div>
+                            <div class="clear"></div>
+                            <h4 class="single-folio-view-title">Ирина Васильевна Г.</h4>
+                            <p class="folio-view-summary">Не думала, что так быстро все сделают. Еще и удалось сэкономить. В других компаниях все как-то размыто и непонятно, а здесь все четко и профессионально. Однозначно рекомендую «СПЕЦМОНТАЖ»!</p>
                         </div>
-                    </a>
+                        <div >
+                            <img src="upload/otziv-2.jpg" alt="Awesome interior design just before holidays" />
+                            <div class="arrow-down"></div>
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-title-type" href="#">
-                        <div class="post-view-categories">
-                            <div class="post-view-category">house</div>
-                            <div class="post-view-category">, material</div>
+                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <div >
+                            <img class="fancy-box" src="upload/otziv-3.jpg" alt="Renovated interior house for young family" />
+                            <div class="arrow-up"></div>
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
                         </div>
-                        <div class="post-view-separator">/</div>
-                        <div class="post-view-date">March 24, 2015</div>
-                        <div class="clear"></div>
-                        <h1 class="single-post-view-title">We went on fair for new house designs</h1>
-                    </a>
+
+                        <div class="folio-view-desc">
+                            <div class="folio-view-separator">/</div>
+                            <div class="folio-view-date">25 Марта 2021</div>
+                            <div class="clear"></div>
+                            <h4 class="single-folio-view-title">Николай Петров</h4>
+                            <p class="folio-view-summary">Несколько раз пробовали забуриться другие организации, но так и не смогли «попасть в воду». То глубины не хватало, то грязная жидкость текла. Замучили меня. Друг посоветовал позвонить в «СПЕЦМОНТАЖ» и я не пожалел. С первого раза буквально за день все сделали. Отличный уровень — все бы так работали!
+                            </p>
+                        </div>
+
+                    </div>
                 </div>
 
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-image-type" href="#">
-                        <img src="upload/metting.jpg" alt="On a business meeting with boss" />
-                        <div class="single-post-view-overlay">
-                            <div class="single-post-view-overlay-inside">
-                                <div class="post-view-categories">
-                                    <div class="post-view-category">material</div>
-                                </div>
-                                <div class="post-view-separator">/</div>
-                                <div class="post-view-date">March 24, 2015</div>
-                                <div class="clear"></div>
-                                <h1 class="single-post-view-title">On a business meeting with boss</h1>
-                            </div>
-                        </div>
-                    </a>
-                </div>
 
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-image-type" href="#">
-                        <img src="upload/girls.jpg" alt="Let light into your home" />
-                        <div class="single-post-view-overlay">
-                            <div class="single-post-view-overlay-inside">
-                                <div class="post-view-categories">
-                                    <div class="post-view-category">material</div>
-                                </div>
-                                <div class="post-view-separator">/</div>
-                                <div class="post-view-date">March 23, 2015</div>
-                                <div class="clear"></div>
-                                <h1 class="single-post-view-title">Let light into your home</h1>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-title-type" href="#">
-                        <div class="post-view-categories">
-                            <div class="post-view-category">material</div>
-                        </div>
-                        <div class="post-view-separator">/</div>
-                        <div class="post-view-date">March 23, 2015</div>
-                        <div class="clear"></div>
-                        <h1 class="single-post-view-title">Using new material</h1>
-                    </a>
-                </div>
-
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-image-type" href="#">
-                        <img src="upload/new-house.jpg" alt="Working on a new project" />
-                        <div class="single-post-view-overlay">
-                            <div class="single-post-view-overlay-inside">
-                                <div class="post-view-categories">
-                                    <div class="post-view-category">house</div>
-                                </div>
-                                <div class="post-view-separator">/</div>
-                                <div class="post-view-date">March 24, 2015</div>
-                                <div class="clear"></div>
-                                <h1 class="single-post-view-title">Working on a new project</h1>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-image-type" href="#">
-                        <img src="upload/sea-view.jpg" alt="Opening new office in Chicago" />
-                        <div class="single-post-view-overlay">
-                            <div class="single-post-view-overlay-inside">
-                                <div class="post-view-categories">
-                                    <div class="post-view-category">office</div>
-                                </div>
-                                <div class="post-view-separator">/</div>
-                                <div class="post-view-date">March 23, 2015</div>
-                                <div class="clear"></div>
-                                <h1 class="single-post-view-title">Opening new office in Chicago</h1>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-title-type" href="#">
-                        <div class="post-view-categories">
-                            <div class="post-view-category">office</div>
-                        </div>
-                        <div class="post-view-separator">/</div>
-                        <div class="post-view-date">March 24, 2015</div>
-                        <div class="clear"></div>
-                        <h1 class="single-post-view-title">Architecture plans for new hotel</h1>
-                    </a>
-                </div>
-
-                <div class="pego-columns-auto-height  pego-columns3 fl single-post-view isotope-item">
-                    <a class="post-view-image-type" href="#">
-                        <img src="upload/house.jpg" alt="Live opening for visitors in Miami" />
-                        <div class="single-post-view-overlay">
-                            <div class="single-post-view-overlay-inside">
-                                <div class="post-view-categories">
-                                    <div class="post-view-category">office</div>
-                                </div>
-                                <div class="post-view-separator">/</div>
-                                <div class="post-view-date">March 24, 2015</div>
-                                <div class="clear"></div>
-                                <h1 class="single-post-view-title">Live opening for visitors in Miami</h1>
-                            </div>
-                        </div>
-                    </a>
-                </div>
                 <div class="clear"></div>
             </div>
+        </div>
         </div>
         <!-- end container -->
 
         <div class="footer">
-            <p><span>CONSTRUCTY.</span> Theme by <a href="http://themeforest.net/user/max-themes/portfolio?ref=max-themes" target="_blank">max-thems</a>. Powered by HTML5.</p>
+            <p><span>©</span> <a href="#">СпецМонтаж</a> </p>
         </div>
     </div>
     <!-- end container-wrapper -->
