--- a/contact-us.html
+++ b/contact-us.html
@@ -36,13 +36,6 @@
 </head>
 
 <body class="home page page-id-5 page-template-default wpb-js-composer js-comp-ver-4.9.2 vc_responsive">
-    <div class="header-socials-wrapper">
-        <ul class="header-socials">
-            <li><a class="header-social header-icon-facebook" href="#" title="Facebook"><i class="header-icons icon-facebook" ></i></a></li>
-            <li><a class="header-social header-icon-twitter" href="#" title="Twitter"><i class="header-icons icon-twitter" ></i></a></li>
-        </ul>
-        <div class="clear"></div>
-    </div>
     <div class="container-wrapper">
         <div id="header-wrapper">
             <div class="logo">
@@ -54,7 +47,7 @@
                         <li class="menu-item"><a href="index.html">Главная</a></li>
                         <li class="menu-item"><a href="work.html">Галерея</a></li>
                         <li class="menu-item"><a href="about-company.html">О нас</a></li>
-                        <li class="menu-item"><a href="our-services.html">Септика</a></li>
+                        <li class="menu-item"><a href="our-services.html">Услуги</a></li>
                         <li class="menu-item"><a href="blog.html">Отзывы</a></li>
                         <li class="menu-item current-menu-item"><a href="contact-us.html">Контакты</a></li>
                     </ul>
@@ -73,7 +66,7 @@
                     <li class="menu-item"><a href="work.html">Галерея</a></li>
                     <li class="menu-item"><a href="about-company.html">About</a></li>
                     <li class="menu-item"><a href="our-services.html">О нас</a></li>
-                    <li class="menu-item"><a href="blog.html">Септика</a></li>
+                    <li class="menu-item"><a href="blog.html">Услуги</a></li>
                     <li class="menu-item current-menu-item"><a href="contact-us.html">Отзывы</a></li>
                 </ul>
             </div>
@@ -88,7 +81,18 @@
                         <div class="vc_column-inner ">
                             <div class="wpb_wrapper">
                                 <div class="contact-form-with-info-wrapper">
-                                    <div class="pego-columns-auto-height pego-columns3 colorsheme2 fl contact-form-with-info1 "><img class="fl" src="upload/new-houses.jpg" alt="" />
+                                    <div class="pego-columns-auto-height pego-columns3 colorsheme2 fl contact-form-with-info1 ">
+                                        <div class="pego-columns pego-columns3 fl opening-hours-wrapper type2" style="background-color: #fff;">
+                                            <div class="page-vertical-alignment">
+                                                <div class="page-icon-wrapper">
+                                                    <div class="page-icon opening-hours-icon pe-7s-clock"></div>
+                                                    <p class="opening-days">Понедельник-Пятница</p>
+                                                    <p>9:00 - 20:00</p>
+                                                    <p class="opening-days">Суббота</p>
+                                                    <p>9:00 - 19:00</p>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="page-vertical-alignment">
                                             <div class="page-icon-wrapper">
                                                 <div class="page-icon pe-7s-pin"></div>
@@ -101,8 +105,8 @@
                                         </div>
                                     </div>
                                     <div class="pego-columns-auto-height pego-columns6 fl contact-form-with-info2">
-                                        <h1 class="contact-form-title">Оставьте нам <span>Сообщение</span></h1>
-                                        <p class="contact-form-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum purus vitae velit rutrum tristique. Duis ac orci sit amet risus vestibulum lobortis. </p>
+                                        <h1 class="contact-form-title">Оставьте нам <span>Заявку</span></h1>
+                                        <p class="contact-form-text">Профессиональное оборудование и опытные специалисты готовы выполнить проект любой сложности</p>
                                         <div role="form" class="wpcf7" id="wpcf7-f151-p155-o1" lang="en-US" dir="ltr">
                                             <div class="screen-reader-response"></div>
                                             <form id="contact-form" action="#">
@@ -122,15 +126,15 @@
                                             </form>
                                         </div>
                                     </div>
-                                    <div class="pego-columns-auto-height pego-columns3 colorsheme1 fl contact-form-with-info3 "><img class="fl" src="upload/two-men.jpg" alt="" />
+                                    <div class="pego-columns-auto-height pego-columns3 colorsheme2 fl contact-form-with-info3 "><img style="height: 290px; width: 100%;" class="fl" src="upload/welcome-gif.gif" alt="" />
                                         <div class="page-vertical-alignment">
                                             <div class="page-icon-wrapper">
                                                 <div class="page-icon pe-7s-paper-plane"></div>
                                                 <div class="contact-info-right">
-                                                    <p><strong>Tel:</strong> (0) 987 234 56</p>
-                                                    <p><strong>Fax:</strong> (0) 455 816 09</p>
-                                                    <p><strong>Email:</strong> info@constructy.com</p>
-                                                    <p><strong>Web:</strong> www.constructy.com</p>
+                                                    <p><strong>Тел:</strong> 8 (4822) 47-55-71</p>
+                                                    <p><strong>Тел:</strong> 8 (910) 647-55-71</p>
+                                                    <p><strong>Почта:</strong> SPEC.MONTAZH@MAIL.RU</p>
+                                                    <p><strong>Сайт:</strong> www.example.com</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -138,36 +142,8 @@
                                 </div>
                                 <div class="clear"></div>
                                 <div class="contact-info--wrapper type2">
-                                    <div class="pego-columns pego-columns3 fl opening-hours-wrapper type2">
-                                        <div class="page-vertical-alignment">
-                                            <div class="page-icon-wrapper">
-                                                <div class="page-icon opening-hours-icon pe-7s-clock"></div>
-                                                <p class="opening-days">MONDAY - SATURDAY</p>
-                                                <p>9:00 am - 9:30 pm</p>
-                                                <p class="opening-days">SUNDAY</p>
-                                                <p>10:00 am - 5:30 pm</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl colorsheme3 find-us-on-map">
-                                        <div class="page-vertical-alignment">
-                                            <div class="page-icon-wrapper">
-                                                <div class="page-icon opening-hours-icon pe-7s-map-2"></div>
-                                                <p>FIND US
-                                                    <br /> ON MAP</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="pego-columns pego-columns6 fl">
-                                        <div id="map_canvas" class="mapStyleClass"></div>
-                                    </div>
                                 </div>
-                                <div class="pego-columns pego-columns12 fl quote-bg-wrapper"><img class="quote-bg-image" src="upload/grid.jpg" alt="" />
-                                    <div class="quote-bg-title">
-                                        <div class="quote-bg-title-inside">We are the best
-                                            <br /> choice in our business</div>
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -178,7 +154,7 @@
         <!-- end container -->
 
         <div class="footer">
-            <p><span>CONSTRUCTY.</span> Theme by <a href="http://themeforest.net/user/max-themes/portfolio?ref=max-themes" target="_blank">max-thems</a>. Powered by HTML5.</p>
+            <p><span>©</span> <a href="#">СпецМонтаж</a> </p>
         </div>
     </div>
     <!-- end container-wrapper -->
@@ -217,7 +193,7 @@
                 });
                 var mapOptions = {
                     zoom: 11,
-                    center: new google.maps.LatLng(34.020500, -118.200496),
+                    center: new google.maps.LatLng(56.54666893926253, 36.42843749830856), 
                     mapTypeControlOptions: {
                         mapTypeIds: [google.maps.MapTypeId.ROADMAP, "pink_parks"]
                     }
@@ -229,7 +205,7 @@
                 var image = "images/map-pin.png";
 
                 var marker = new google.maps.Marker({
-                    position: new google.maps.LatLng(34.020500, -118.200496),
+                    position: new google.maps.LatLng(56.54666893926253, 36.42843749830856),
                     map: map,
                     icon: image
                 });
