--- a/home-example-2.html
+++ b/home-example-2.html
@@ -291,7 +291,7 @@
         <!-- end container -->
 
         <div class="footer">
-            <p><span>CONSTRUCTY.</span> Theme by <a href="http://themeforest.net/user/max-themes/portfolio?ref=max-themes" target="_blank">max-thems</a>. Powered by HTML5.</p>
+            <p><span>©</span> <a href="#">СпецМонтаж</a> </p>
         </div>
     </div>
     <!-- end container-wrapper -->
