--- a/our-services.html
+++ b/our-services.html
@@ -36,13 +36,6 @@
 </head>
 
 <body class="home page page-id-5 page-template-default wpb-js-composer js-comp-ver-4.9.2 vc_responsive">
-    <div class="header-socials-wrapper">
-        <ul class="header-socials">
-            <li><a class="header-social header-icon-facebook" href="#" title="Facebook"><i class="header-icons icon-facebook" ></i></a></li>
-            <li><a class="header-social header-icon-twitter" href="#" title="Twitter"><i class="header-icons icon-twitter" ></i></a></li>
-        </ul>
-        <div class="clear"></div>
-    </div>
     <div class="container-wrapper">
         <div id="header-wrapper">
             <div class="logo">
@@ -54,7 +47,7 @@
                         <li class="menu-item"><a href="index.html">Главная</a></li>
                         <li class="menu-item"><a href="work.html">Галерея</a></li>
                         <li class="menu-item"><a href="about-company.html">О нас</a></li>
-                        <li class="menu-item current-menu-item"><a href="our-services.html">Септика</a></li>
+                        <li class="menu-item current-menu-item"><a href="our-services.html">Услуги</a></li>
                         <li class="menu-item"><a href="blog.html">Отзывы</a></li>
                         <li class="menu-item"><a href="contact-us.html">Контакты</a></li>
                     </ul>
@@ -73,7 +66,7 @@
                     <li class="menu-item"><a href="work.html">Галерея</a></li>
                     <li class="menu-item"><a href="about-company.html">About</a></li>
                     <li class="menu-item"><a href="our-services.html">О нас</a></li>
-                    <li class="menu-item current-menu-item"><a href="blog.html">Септика</a></li>
+                    <li class="menu-item current-menu-item"><a href="blog.html">Услуги</a></li>
                     <li class="menu-item"><a href="contact-us.html">Отзывы</a></li>
                 </ul>
             </div>
@@ -88,90 +81,68 @@
                         <div class="vc_column-inner ">
                             <div class="wpb_wrapper">
                                 <div class="services-sh-wrapper">
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/interior11.jpg" class="attachment-full size-full" alt="interior1" /></div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/cleanerwater.jpg" class="attachment-full size-full" alt="interior1" /></div>
                                     <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Interior <span>design</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
+                                        <h1 class="service-title">Водоочистка</h1>
+                                        <p class="service-excerpt">Рассчитаем все параметры фильтров, установим и подключим необходимую Вам систему водоочистки.</p>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/roofing.jpg" class="attachment-full size-full" alt="roofing" /></div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/canalization.jpg" class="attachment-full size-full" alt="roofing" /></div>
                                     <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Quality <span>isolation</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Quick <span>Plumbing</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/free-consulting.jpg" class="attachment-full size-full" alt="free-consulting" /></div>
-                                    <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Condo <span>remodeling</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/condroremodeling.jpg" class="attachment-full size-full" alt="condroremodeling" /></div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/renovation.jpg" class="attachment-full size-full" alt="renovation" /></div>
-                                    <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Kitchen <span>Remodeling</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/painting.jpg" class="attachment-full size-full" alt="painting"  /></div>
-                                    <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Tiling & <span>Painting</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
+                                        <h1 class="service-title">КАНАЛИЗАЦИЯ</h1>
+                                        <p class="service-excerpt">Сделаем монтаж, установку оборудования, необходимого для автономной канализации и водоотведения.</p>
                                     </div>
                                     <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Metal <span>Roofing</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
+                                        <h1 class="service-title">КОНСУЛЬТАЦИИ</h1>
+                                        <p class="service-excerpt">Бесплатно проконсультируем по вопросам, связанным с водой, бурением скважин и их обустройством.
+                                        </p>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/roofing.jpg" class="attachment-full size-full" alt="roofing" /></div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/button-2076_1280.jpg" class="attachment-full size-full" alt="free-consulting" /></div>
                                     <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Buildings <span>Architecture</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
+                                        <h1 class="service-title">ОБУСТРОЙСТВО</h1>
+                                        <p class="service-excerpt">Обустроим Вашу скважину, установим стальной кессон, подключим все необходимое водозаборное оборудование.</p>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/architecture.jpg" class="attachment-full size-full" alt="architecture" /></div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/new-houses.jpg" class="attachment-full size-full" alt="new-houses" /></div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/blackbox.jpg" class="attachment-full size-full" alt="condroremodeling" /></div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/burenie.jpg" class="attachment-full size-full" alt="renovation" /></div>
                                     <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">General <span>Contracting</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
+                                        <h1 class="service-title">Бурение</h1>
+                                        <p class="service-excerpt">Пробурим скважину в грунтах любой сложности: бытовую, промышленную, инженерную, артезианскую.
+                                        </p>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/laminate.jpg" class="attachment-full size-full" alt="laminate" /></div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/writing-1149962_1280.jpg" class="attachment-full size-full" alt="painting"  /></div>
                                     <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Laminate <span>Flooring</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
+                                        <h1 class="service-title">ЛИЦЕНЗИРОВАНИЕ</h1>
+                                        <p class="service-excerpt">Выдадим полный пакет лицензионных документов, разрешающих извлекать воду из водоносных горизонтов.
+                                        </p>
                                     </div>
                                     <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">House <span>Renovation</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
+                                        <h1 class="service-title">ДОКУМЕНТИРОВАНИЕ</h1>
+                                        <p class="service-excerpt">Оформим договор подряда на выполнение работ и сделаем подробный паспорт скважины с ее характеристиками.
+                                        </p>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/new-houses.jpg" class="attachment-full size-full" alt="new-houses" /></div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/signature-3113182_1280.jpg" class="attachment-full size-full" alt="roofing" /></div>
                                     <div class="pego-columns pego-columns3 fl single-service">
-                                        <h1 class="service-title">Construction <span>Consultant</span></h1>
-                                        <p class="service-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor.</p>
+                                        <h1 class="service-title">ГЕОИЗЫСКАНИЯ</h1>
+                                        <p class="service-excerpt">Исследуем характеристики грунта, проведем инженерно-геологические и другие геофизические изыскания.
+                                        </p>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/two-men.jpg" class="attachment-full size-full" alt="two-men" /></div>
-                                </div>
-                                <div class="pego-columns pego-columns12 fl quote-bg-wrapper"><img class="quote-bg-image" src="upload/grid.jpg" alt="" />
-                                    <div class="quote-bg-title">
-                                        <div class="quote-bg-title-inside">We are the best
-                                            <br /> choice in our business</div>
-                                    </div>
-                                </div>
+                                    <div style="overflow: hidden;" class="pego-columns pego-columns3 fl single-service-image"><img width="315" height="290" src="upload/expression-3073830_1280.jpg" class="attachment-full size-full" alt="architecture" /></div>
+                                    
+                                    
                                 <div class="contact-info--wrapper">
                                     <div class="pego-columns pego-columns6 fl contact-element1">
-                                        <div class="contact-info1">Call Us Everyday</div>
-                                        <div class="contact-info2">HOT NUMBER</div>
-                                        <div class="contact-info3">(0) 987 234 56</div>
+                                        <div class="contact-info1">Наш телефон</div>
+                                        <div class="contact-info2">Горячей линии</div>
+                                        <div class="contact-info3">8 (4822) 47-55-71</div>
+                                        <div class="contact-info3">8 (910) 647-55-71</div>
                                     </div>
-                                    <div class="pego-columns pego-columns3 fl contact-element2">
-                                        <div id="map_canvas" class="mapStyleClass"></div>
-                                    </div>
-                                    <div class="pego-columns pego-columns3 fl colorsheme1 contact-element3 opening-hours-wrapper">
+                                    <div class="pego-columns pego-columns6 fl colorsheme2 contact-element3 opening-hours-wrapper">
                                         <div class="page-vertical-alignment">
                                             <div class="page-icon-wrapper">
                                                 <div class="page-icon opening-hours-icon pe-7s-clock"></div>
-                                                <p class="opening-days">MONDAY - SATURDAY</p>
-                                                <p>9:00 am - 9:30 pm</p>
-                                                <p class="opening-days">SUNDAY</p>
-                                                <p>10:00 am - 5:30 pm</p>
+                                                <p class="opening-days">Понедельник-Пятница</p>
+                                                <p>9:00 - 20:00</p>
+                                                <p class="opening-days">Суббота</p>
+                                                <p>9:00 - 19:00</p>
                                             </div>
                                         </div>
                                     </div>
@@ -187,7 +158,7 @@
         <!-- end container -->
 
         <div class="footer">
-            <p><span>CONSTRUCTY.</span> Theme by <a href="http://themeforest.net/user/max-themes/portfolio?ref=max-themes" target="_blank">max-thems</a>. Powered by HTML5.</p>
+            <p><span>©</span> <a href="#">СпецМонтаж</a> </p>
         </div>
     </div>
     <!-- end container-wrapper -->
