--- a/work.html
+++ b/work.html
@@ -37,13 +37,6 @@
 </head>
 
 <body class="home page page-id-5 page-template-default wpb-js-composer js-comp-ver-4.9.2 vc_responsive">
-    <div class="header-socials-wrapper">
-        <ul class="header-socials">
-            <li><a class="header-social header-icon-facebook" href="#" title="Facebook"><i class="header-icons icon-facebook" ></i></a></li>
-            <li><a class="header-social header-icon-twitter" href="#" title="Twitter"><i class="header-icons icon-twitter" ></i></a></li>
-        </ul>
-        <div class="clear"></div>
-    </div>
     <div class="container-wrapper">
         <div id="header-wrapper">
             <div class="logo">
@@ -55,7 +48,7 @@
                         <li class="menu-item"><a href="index.html">Главная</a></li>
                         <li class="menu-item current-menu-item"><a href="work.html">Галерея</a></li>
                         <li class="menu-item"><a href="about-company.html">О нас</a></li>
-                        <li class="menu-item"><a href="our-services.html">Септика</a></li>
+                        <li class="menu-item"><a href="our-services.html">Услуги</a></li>
                         <li class="menu-item"><a href="blog.html">Отзывы</a></li>
                         <li class="menu-item"><a href="contact-us.html">Контакты</a></li>
                     </ul>
@@ -73,7 +66,7 @@
                     <li class="menu-item current-menu-item"><a href="work.html">Галерея</a></li>
                     <li class="menu-item"><a href="about-company.html">About</a></li>
                     <li class="menu-item"><a href="our-services.html">О нас</a></li>
-                    <li class="menu-item"><a href="blog.html">Септика</a></li>
+                    <li class="menu-item"><a href="blog.html">Услуги</a></li>
                     <li class="menu-item"><a href="contact-us.html">Отзывы</a></li>
                 </ul>
             </div>
@@ -87,141 +80,128 @@
             </div>
             <div class="folio-view-wrapper">
                 <div class="work-text"></div>
-                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
                     <div class="folio-view-item">
-                        <a class="folio-view-thumb zoom" href="upload/folio121.jpg">
-                            <img src="upload/folio121.jpg" alt="Interior design in colors. Amazing!" />
-                            <div class="arrow-up"></div>
-                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
-                            <div class="folio-view-overlay-bg"></div>
-                        </a>
-
-                        <div class="folio-view-desc">
-                            <div class="folio-view-categories">
-                                <a href="#" rel="tag">buildings</a>, <a href="#" rel="tag">interior</a>, <a href="#" rel="tag">pools</a> </div>
-                            <div class="folio-view-separator">/</div>
-                            <div class="folio-view-date">March 25, 2015</div>
-                            <div class="clear"></div>
-                            <h1 class="single-folio-view-title"><a href="#" >Interior design in colors. Amazing!</a></h1>
-                            <p class="folio-view-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
-                    <div class="folio-view-item">
-
-                        <div class="folio-view-desc">
-                            <div class="folio-view-categories">
-                                <a href="#" rel="tag">buildings</a>, <a href="#" rel="tag">interior</a> </div>
-                            <div class="folio-view-separator">/</div>
-                            <div class="folio-view-date">March 25, 2015</div>
-                            <div class="clear"></div>
-                            <h1 class="single-folio-view-title"><a href="#" >Awesome interior design just before holidays</a></h1>
-                            <p class="folio-view-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
-                        </div>
-                        <a class="folio-view-thumb zoom" href="upload/folio17.jpg">
-                            <img src="upload/folio17.jpg" alt="Awesome interior design just before holidays" />
-                            <div class="arrow-down"></div>
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-04-07.jpg">
+                            <img src="upload/photo_2021-05-19_14-04-07.jpg" alt="Interior design in colors. Amazing!" />
                             <div class="folio-view-overlay-icon pe-7s-plus"></div>
                             <div class="folio-view-overlay-bg"></div>
                         </a>
                     </div>
                 </div>
 
-                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
                     <div class="folio-view-item">
-                        <a class="folio-view-thumb zoom" href="upload/folio15.jpg">
-                            <img src="upload/folio15.jpg" alt="Renovated interior house for young family" />
-                            <div class="arrow-up"></div>
-                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
-                            <div class="folio-view-overlay-bg"></div>
-                        </a>
-
-                        <div class="folio-view-desc">
-                            <div class="folio-view-categories">
-                                <a href="#" rel="tag">interior</a>, <a href="#" rel="tag">pools</a> </div>
-                            <div class="folio-view-separator">/</div>
-                            <div class="folio-view-date">March 25, 2015</div>
-                            <div class="clear"></div>
-                            <h1 class="single-folio-view-title"><a href="#" >Renovated interior house for young family</a></h1>
-                            <p class="folio-view-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
-                    <div class="folio-view-item">
-
-                        <div class="folio-view-desc">
-                            <div class="folio-view-categories">
-                                <a href="#" rel="tag">houses</a> </div>
-                            <div class="folio-view-separator">/</div>
-                            <div class="folio-view-date">March 25, 2015</div>
-                            <div class="clear"></div>
-                            <h1 class="single-folio-view-title"><a href="#" >Modern and square house in London</a></h1>
-                            <p class="folio-view-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
-                        </div>
-                        <a class="folio-view-thumb zoom" href="upload/folio10.jpg">
-                            <img src="upload/folio10.jpg" alt="Modern and square house in London" />
-                            <div class="arrow-down"></div>
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-04-25.jpg">
+                            <img src="upload/photo_2021-05-19_14-04-25.jpg" alt="Awesome interior design just before holidays" />
                             <div class="folio-view-overlay-icon pe-7s-plus"></div>
                             <div class="folio-view-overlay-bg"></div>
                         </a>
                     </div>
                 </div>
 
-                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
                     <div class="folio-view-item">
-                        <a class="folio-view-thumb zoom" href="upload/folio1.jpg">
-                            <img src="upload/folio1.jpg" alt="Luxury house in Bali by Pego Design" />
-                            <div class="arrow-up"></div>
-                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
-                            <div class="folio-view-overlay-bg"></div>
-                        </a>
-
-                        <div class="folio-view-desc">
-                            <div class="folio-view-categories">
-                                <a href="#" rel="tag">houses</a> </div>
-                            <div class="folio-view-separator">/</div>
-                            <div class="folio-view-date">March 18, 2015</div>
-                            <div class="clear"></div>
-                            <h1 class="single-folio-view-title"><a href="#" >Luxury house in Bali by Pego Design</a></h1>
-                            <p class="folio-view-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="pego-columns-auto-height  pego-columns6 fl folio-view isotope-item">
-                    <div class="folio-view-item">
-
-                        <div class="folio-view-desc">
-                            <div class="folio-view-categories">
-                                <a href="#" rel="tag">houses</a>, <a href="#" rel="tag">pools</a> </div>
-                            <div class="folio-view-separator">/</div>
-                            <div class="folio-view-date">March 18, 2015</div>
-                            <div class="clear"></div>
-                            <h1 class="single-folio-view-title"><a href="#" >Villa in Los Angeles architecture design</a></h1>
-                            <p class="folio-view-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
-                        </div>
-                        <a class="folio-view-thumb zoom" href="upload/folio7.jpg">
-                            <img src="upload/folio7.jpg" alt="Villa in Los Angeles architecture design" />
-                            <div class="arrow-down"></div>
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-04-28.jpg">
+                            <img src="upload/photo_2021-05-19_14-04-28.jpg" alt="Renovated interior house for young family" />
                             <div class="folio-view-overlay-icon pe-7s-plus"></div>
                             <div class="folio-view-overlay-bg"></div>
                         </a>
                     </div>
                 </div>
+
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-04-29.jpg">
+                            <img src="upload/photo_2021-05-19_14-04-29.jpg" alt="Modern and square house in London" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-04-44.jpg">
+                            <img src="upload/photo_2021-05-19_14-04-44.jpg" alt="Luxury house in Bali by Pego Design" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+
+                    </div>
+                </div>
+
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-05-23.jpg">
+                            <img src="upload/photo_2021-05-19_14-05-23.jpg" alt="Villa in Los Angeles architecture design" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-05-01.jpg">
+                            <img src="upload/photo_2021-05-19_14-05-01.jpg" alt="Villa in Los Angeles architecture design" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-05-26.jpg">
+                            <img src="upload/photo_2021-05-19_14-05-26.jpg" alt="Villa in Los Angeles architecture design" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-05-34.jpg">
+                            <img src="upload/photo_2021-05-19_14-05-34.jpg" alt="Villa in Los Angeles architecture design" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-05-26 (2).jpg">
+                            <img src="upload/photo_2021-05-19_14-05-26 (2).jpg" alt="Villa in Los Angeles architecture design" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-05-18.jpg">
+                            <img src="upload/photo_2021-05-19_14-05-18.jpg" alt="Villa in Los Angeles architecture design" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="pego-columns-auto-height  pego-columns3 fl folio-view isotope-item">
+                    <div class="folio-view-item">
+                        <a class="folio-view-thumb zoom" href="upload/photo_2021-05-19_14-05-23 (2).jpg">
+                            <img src="upload/photo_2021-05-19_14-05-23 (2).jpg" alt="Villa in Los Angeles architecture design" />
+                            <div class="folio-view-overlay-icon pe-7s-plus"></div>
+                            <div class="folio-view-overlay-bg"></div>
+                        </a>
+                    </div>
+                </div>
+                
                 <div class="clear"></div>
             </div>
         </div>
         <!-- end container -->
 
         <div class="footer">
-            <p><span>CONSTRUCTY.</span> Theme by <a href="http://themeforest.net/user/max-themes/portfolio?ref=max-themes" target="_blank">max-thems</a>. Powered by HTML5.</p>
+            <p><span>©</span> <a href="#">СпецМонтаж</a> </p>
         </div>
     </div>
     <!-- end container-wrapper -->
